[package]
name = "rust-cookbook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
image = "0.24.5"
rand = "*"
png = "0.17.9"
# inline-python = "0.10.0"

[lib]
# proc-macro = true
